--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -5,113 +5,8 @@ body{
     color: #fff;
 }
 
-.home{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+@import './home.scss';
+@import './working.scss';
+@import './utils.scss';
+@import './card.scss';
 
-    .app-logo{
-        margin: 0 auto;
-        display: block;
-        width: 20em;
-        margin-bottom: 5em;
-    }
-
-    .container{
-        width: 50%;
-        margin: auto
-    }
-
-    .input-start{
-        margin-bottom: 6em !important;
-    }
-
-    .start-button{
-        text-align: center;
-    }
-
-}
-
-
-.working{
-    margin: 10em 0;
-
-    .container{
-        min-width: 615px;
-        margin: auto;
-        width: 75%;
-    }
-
-}
-
-.card.header{
-    background: #705429;
-
-    .app-logo{
-        flex: 1;
-    }
-
-    .path-info{
-        flex: 10;
-    }
-}
-
-.card{
-    display: flex;
-    padding: 2em;
-    margin-top: 1em;
-    align-items: center;
-    background: #424242;
-    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
-}
-
-.card-container:nth-child(2){
-    flex: auto;
-    padding: 0 2em;
-}
-
-.card-content:last-child{
-    margin-bottom: 0;
-
-    .button{
-        margin: 0 auto;
-    }
-}
-
-.card-content{
-    display: flex;
-    align-items: center;
-    margin-bottom: 1.5em;
-
-    .label-select{
-        margin-right: 1.5em;
-    }
-
-    .icon-folder{
-        margin-right: 0.5em;
-    }
-}
-
-.card-header{
-    display: flex;
-    align-items: center;
-}
-
-
-.primary-actions{
-    position: fixed;
-    left: 0;
-    top: 0;
-    background: #9d9d9d12;
-    padding: 2em;
-    width: 100vw;
-    z-index: 1;
-    text-align: center;
-    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
-
-    .button{
-        margin: 0 1em;
-    }
-}
