--- a/client/src/scss/card.scss
+++ b/client/src/scss/card.scss
@@ -1,5 +1,5 @@
 .card.header{
-  background: #705429;
+  background: #323232;
 
   .app-logo{
       margin-right: 1em;
@@ -13,6 +13,11 @@
   align-items: center;
   background: #424242;
   box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+
+  &.disabled{
+    opacity: 0.5;
+  }
+
 }
 
 .card-container:nth-child(2){
@@ -45,4 +50,15 @@
 .card-header{
   display: flex;
   align-items: center;
+}
+
+article{
+  position: relative;
+
+  .progress-bar{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
