--- a/client/src/scss/utils.scss
+++ b/client/src/scss/utils.scss
@@ -1,20 +1,17 @@
 .primary-actions{
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  background: #9d9d9d12;
   padding: 2em;
-  z-index: 2;
   text-align: center;
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
 
   .button{
       margin: 0 1em;
   }
 }
 
-@media (max-width: 700px) {   
+.path-info{
+    flex: 1;
+}
+
+@media (max-width: 700px) {
   .home{
       .container{
          max-width: 20em;
@@ -30,9 +27,14 @@
       margin: 10em 0;
 
       .container{
-          margin: 0; 
+          margin: 0;
           width: 100%;
       }
   }
-  
+
+  .primary-actions .button {
+      margin: 1em 0;
+        width: 100%;
+    }
+
 }
